--- a/blogpost.html
+++ b/blogpost.html
@@ -1,16 +1,17 @@
 <html>
     <head>
-        <title>El título del post</title>
-        <link rel="stylesheet" href="./css/estilos.css">
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post.</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas.</p>
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             </div>
         </div>
     </body>
