--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post.</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas.</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar, pero estadísticamente no lo eres... Por ahora. </p>
+                <p>Suscríbete y dale like.</p>
             </div>
         </div>
     </body>
