--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar, pero estadísticamente no lo eres... Por ahora. </p>
                 <p>Suscríbete y dale like.</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi <3.
+            </div>
         </div>
     </body>
 </html>
