Agregué un gitignore

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,14 +11,15 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post.</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas.</p>
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar, pero estadísticamente no lo eres... Por ahora. </p>
                 <p>Suscríbete y dale like.</p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi <3.
+                Hecho con amor en Platzi <3
             </div>
         </div>
+    
     </body>
 </html>
